Update install.sh script & Update minetest.conf

--- a/minetest.conf
+++ b/minetest.conf
@@ -7,3 +7,32 @@
 # Activer le mode progressif
 craftguide_progressive_mode = true
 
+###################################################
+## Personnalisation de la génération de la carte ##
+###################################################
+mg_biome_np_heat = {
+	lacunarity = 2
+	persistence = 0.5
+	octaves = 3
+	offset = 50
+	scale = 50
+	flags = 
+	spread = (500,500,500)
+	seed = 5349
+}
+mg_biome_np_humidity = {
+	lacunarity = 2
+	persistence = 0.5
+	octaves = 3
+	offset = 50
+	scale = 50
+	flags = 
+	spread = (500,500,500)
+	seed = 842
+}
+
+##################################
+## Personnalisation de gameplay ##
+##################################
+enable_damage = true
+creative_mode = false
