Fix script and update minietest.conf

--- a/minetest.conf
+++ b/minetest.conf
@@ -1,3 +1,94 @@
+##############################
+## Configuration du serveur ##
+##############################
+name = admin
+# Logs parameters - 0 = none, 1 = warning, 2 = action, 3 = info, 4 = verbose
+debug_log_level = action
+# Profiling (mod needed because the minetest cmdline sucks)
+profiler.load = false
+#profilerdumper.interval = 300
+# Permet aux vieux client de minetest de ce connecter
+strict_protocol_version_checking = false
+
+disallow_empty_password = true
+server_dedicated = true
+
+# 1 day-night cycle lasts 40 minutes instead of 20.
+time_speed = 36
+# Slightly higher player limit by default.
+max_users = 15
+# Give basics privileges to new players.
+default_privs = home, spawn, faction_user
+# If true, actions are recorded for rollback
+enable_rollback_recording = true
+# Activate fire
+disable_fire = false
+# Enable TNT
+enable_tnt = true
+# Si false, les pseudos des joueurs sont cachés à partir d'une distance de 50 blocs
+unlimited_player_transfer_distance = false
+# Fix the deleted item when die if your bags/craft grid/inventory is full
+max_objects_per_block = 150     # default value is 49
+max_forceloaded_blocks = 100
+
+##############################################
+## SERVER SETTINGS FOR IMPROVED PERFORMANCE ##
+##############################################
+max_block_generate_distance = 16                  # 4 for better performances
+max_block_send_distance = 8                       # 6 for better performances
+max_simultaneous_block_sends_per_client = 24	  # 6 for better performances
+max_simultaneous_block_sends_server_total = 500   # 125 for better performances
+time_send_interval = 10
+active_block_range = 1
+server_map_save_interval = 60
+sqlite_synchronous = 0
+
+### SERVER AND PUBLIC INFORMATIONS ###
+######################################
+server_name = NotreAmiLeCube (Survival & PVP) [FR/EN]
+server_description = Server hosted by sys4. This server have a class system(Warrior, Hunter, Wizard) and is highly modded, content-rich, good luck to survive and have fun! [This server is a fork from MinetestForFun Classic]
+motd = Welcome to "NotreAmiLeCube (Survival & PVP) [EN/FR]" server! / Bienvenue sur le serveur "NotreAmiLeCube (Survie & PVP) [FR/EN]" !
+serverlist_url = servers.minetest.net
+server_url = http://mff.sys4.fr/
+server_announce = false
+server_address = 78.210.252.189
+port = 30002
+# curl default 5sec but timeout, fix to 15sec
+curl_timeout = 15000
+
+### MOVEMENT MODIFICATIONS ###
+##############################
+# Slightly decreased compared to minetest_next.
+#movement_acceleration_default = 2.4
+# Same acceleration in air and on the ground, to fix some movement glitches. Also is easier to play.
+#movement_acceleration_air = 1.2
+# Almost instant acceleration in fast mode for more control.
+#movement_acceleration_fast = 24
+# Walking is 20 % faster than in minetest_game. Makes playing without the "fast" privilege less boring.
+#movement_speed_walk = 4.8
+# Half the speed of walking, just like the animation.
+#movement_speed_crouch = 2.4
+# 5 times faster than walking.
+#movement_speed_fast = 24
+# Makes climbing speed faster than rising in the water. Also makes ladders more useful.
+#movement_speed_climb = 4.8
+# Faster movement in liquids. Jumping at the water surface also speeds up swimming.
+#movement_liquid_fluidity = 1.6 (default = 1)
+# Ralentissement à la surface de l'eau
+#movement_liquid_fluidity_smooth = 0.5
+# Vitesse à laquelle le joueur coule
+#movement_liquid_sink = 15
+# Slightly less gravity.
+#movement_gravity = 9.5
+# Jump height slightly reduced.
+#movement_speed_jump = 6.5
+# Emplacement du static spawn point
+static_spawnpoint = 144, 25, 261
+# Emplacment du static spawn pour le nether
+nether_static_spawnpoint = 79, -20018, -45
+# Désactivation de l'anti-cheat qui fait ce téléporter en arrière si l'on va trop vite
+disable_anticheat = true
+
 ###############################
 ## Personnalisation des mods ##
 ###############################
@@ -30,6 +121,19 @@ mg_biome_np_humidity = {
 	spread = (500,500,500)
 	seed = 842
 }
+# A chosen map seed for a new map, leave empty for random
+#fixed_map_seed = 13107546752813893513
+fixed_map_seed = 1681440164076556961
+mg_name = valleys
+mg_valleys_spflags = altitude_chill,humid_rivers
+mgvalleys_altitude_chill = 90
+mgvalleys_large_cave_depth = -33
+mgvalleys_lava_features = 0
+mgvalleys_massive_cave_depth = -256
+mgvalleys_river_depth = 4
+mgvalleys_river_size = 5
+mgvalleys_water_features = 0
+mgvalleys_cave_width = 0.09
 
 ##################################
 ## Personnalisation de gameplay ##
