Update install script for skinsdb update

--- a/minetest.conf
+++ b/minetest.conf
@@ -89,15 +89,6 @@ nether_static_spawnpoint = 79, -20018, -45
 # Désactivation de l'anti-cheat qui fait ce téléporter en arrière si l'on va trop vite
 disable_anticheat = true
 
-###############################
-## Personnalisation des mods ##
-###############################
-
-# craftguide #
-##############
-# Activer le mode progressif
-craftguide_progressive_mode = true
-
 ###################################################
 ## Personnalisation de la génération de la carte ##
 ###################################################
@@ -140,3 +131,17 @@ mgvalleys_cave_width = 0.09
 ##################################
 enable_damage = true
 creative_mode = false
+
+###############################
+## Personnalisation des mods ##
+###############################
+
+# craftguide #
+##############
+# Activer le mode progressif
+craftguide_progressive_mode = true
+
+# item_drop #
+#############
+enable_item_pickup = true
+enable_item_drop = false
