Change mapgen to carpathian

--- a/minetest.conf
+++ b/minetest.conf
@@ -115,16 +115,7 @@ mg_biome_np_humidity = {
 # A chosen map seed for a new map, leave empty for random
 #fixed_map_seed = 13107546752813893513
 fixed_map_seed = 1681440164076556961
-mg_name = valleys
-mg_valleys_spflags = altitude_chill,humid_rivers
-mgvalleys_altitude_chill = 90
-mgvalleys_large_cave_depth = -33
-mgvalleys_lava_features = 0
-mgvalleys_massive_cave_depth = -256
-mgvalleys_river_depth = 4
-mgvalleys_river_size = 5
-mgvalleys_water_features = 0
-mgvalleys_cave_width = 0.09
+mg_name = carpathian
 
 ##################################
 ## Personnalisation de gameplay ##
@@ -145,3 +136,5 @@ craftguide_progressive_mode = true
 #############
 enable_item_pickup = true
 enable_item_drop = false
+enable_item_pickup_key = false
+item_pickup_radius = 0.75
