--- a/minetest.conf
+++ b/minetest.conf
@@ -49,10 +49,10 @@ server_name = NotreAmiLeCube (Survival & PVP) [FR/EN]
 server_description = Server hosted by sys4. This server have a class system(Warrior, Hunter, Wizard) and is highly modded, content-rich, good luck to survive and have fun! [This server is a fork from MinetestForFun Classic]
 motd = Welcome to "NotreAmiLeCube (Survival & PVP) [EN/FR]" server! / Bienvenue sur le serveur "NotreAmiLeCube (Survie & PVP) [FR/EN]" !
 serverlist_url = servers.minetest.net
-server_url = http://mff.sys4.fr/
+server_url = <URL>
 server_announce = false
-server_address = 78.210.252.189
-port = 30002
+server_address = <IP>
+port = <UDP port>
 # curl default 5sec but timeout, fix to 15sec
 curl_timeout = 15000
 
